# react-native-nitro-sqlite

./: .clang-format-ignore  .gitignore  .prettierignore  .prettierrc.js  README.md  bun.lockb  bunfig.toml  package.json  tsconfig.json
.github/workflows/: build-android-release.yml  build-android.yml  build-ios.yml  lint-cpp.yml  lint-typescript.yml  test-harness-android.yml  test-harness-ios.yml  update-lockfiles.yml
config/: .eslintrc.js  .prettierrc.js  tsconfig.json
example/: Gemfile  babel.config.js  jest.config.js  metro.config.js  package.json  rn-harness.config.mjs  tsconfig.json
example/__tests__/: typeorm.harness.ts  unit.harness.ts
example/android/: build.gradle
example/ios/: Podfile
example/src/: App.tsx  Database.ts  initGlobals.ts  navigation.ts
package/: README.md  RNNitroSQLite.podspec  RNQuickSQLite.podspec  nitro.json  package.json  tsconfig.build.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/src/main/java/com/margelo/rnnitrosqlite/: HybridNitroSQLiteOnLoad.kt  RNNitroSQLitePackage.kt
package/android/src/main/kotlin/com/margelo/rnnitrosqlite/: HybridNitroSQLiteOnLoad.kt  RNNitroSQLitePackage.kt
package/android/src/newarch/com/margelo/rnnitrosqlite/: RNNitroSQLiteOnLoadModule.java
package/android/src/oldarch/com/margelo/rnquicksqlite/: RNQuickSQLiteOnLoadModule.kt
package/cpp/: logs.hpp  (+8 more)
patches/: react-native+0.78.0+001+jsi-podspec.patch  react-native-nitro-modules+0.24.1+001+public-headers.patch  typeorm+0.3.27+001+expose-package-json-file.patch
scripts/: clang-format.sh  release.sh
(+49 files in other folders)
